--- a/ui/mods/sim_speed/sim_speed.css
+++ b/ui/mods/sim_speed/sim_speed.css
@@ -1,14 +1,13 @@
 .div_sim_speed {
   height: 30px;
   width: 80px;
-  font-family: 'Sansation Bold';
+  font-family: 'Trebuchet MS Bold';
   font-size: 18px;
   color: #00b3ff;
   text-shadow: 0px 0px 30px #00b3ff;
-  background: black;
-  border-bottom: solid #444 3px;
+  background: url(coui://ui/main/game/live_game/img/ingame_options_bar/img_bar_clock.png) right top no-repeat;
   margin: 0px 0px -2px -4px;
-  padding: 0px 6px 0px 10px;
+  padding: 0px 24px 0px 10px;
   display: flex;
   justify-content: center;
   align-items: center;
